// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Solver > Version 2 basic LPP check 1`] = `
"
Maximize
  obj: i_Product_Exhaust+i_Product_SteamHi+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 4 n_3_int + 8 n_1_int + 2 n_2_int = 0
  in_electricity: - 1 in_electricity + 200 n_3 + 200 n_1 = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 + 4 n_3 + 4 n_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 + 2 n_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  in_footprint: - 1 in_footprint + 25 n_0_int + 42 n_3_int + 54 n_1_int + 18 n_2_int = 0
  c0: - 1 c0 - 24 n_0 + 24 n_1 + 48 n_2 = 0
  c1: - 1 c1 + 24 n_1 - 24 n_0 <= 0
  c2: - 1 c2 + 48 n_2 - 24 n_0 <= 0
  c3: - 1 c3 + 12 n_0 - 24 n_1 - 60 n_3 = 0
  c4: - 1 c4 - 24 n_1 + 12 n_0 >= 0
  c5: - 1 c5 - 60 n_3 + 12 n_0 >= 0
  c6: - 1 c6 - 12 n_3 + 6 n_1 = 0
  o_Product_Acid: - 1 o_Product_Acid + 72 n_3 = 0
  i_Product_Exhaust: - 1 i_Product_Exhaust - 240 n_1 = 0
  o_Product_CarbonDioxide: - 1 o_Product_CarbonDioxide + 96 n_1 = 0
  o_Product_Virtual_PollutedAir: - 1 o_Product_Virtual_PollutedAir + 24 n_1 = 0
  i_Product_SteamHi: - 1 i_Product_SteamHi - 48 n_2 = 0
  o_Product_Virtual_MechPower: - 1 o_Product_Virtual_MechPower + 12000 n_2 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  n_1_lower: n_1_int - n_1 >= 0
  n_1_upper: n_1_int - n_1 <= 0.99999
  n_2_lower: n_2_int - n_2 >= 0
  n_2_upper: n_2_int - n_2 <= 0.99999
  n_3_lower: n_3_int - n_3 >= 0
  n_3_upper: n_3_int - n_3 <= 0.99999
  
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  in_footprint free
  c0 = 0
  c1 = 0
  c2 = 0
  c3 = 0
  c4 = 0
  c5 = 0
  c6 = 0
  o_Product_Acid free
  i_Product_Exhaust free
  o_Product_CarbonDioxide free
  o_Product_Virtual_PollutedAir free
  i_Product_SteamHi free
  o_Product_Virtual_MechPower free
  
  
  n_0 >= 0
  n_1 >= 0
  n_2 >= 0
  n_3 >= 0
  n_0_int free
  n_1_int free
  n_2_int free
  n_3_int free
  
General
  n_0_int
  n_1_int
  n_2_int
  n_3_int
  
End"
`;

exports[`Space research solver > Crew launch is floor-bound at low demand (L3 + T2 crew launch) 1`] = `
"
Maximize
  obj: i_Product_Virtual_SpaceStationParts1_AtStation+i_Product_Virtual_CrewSupplies_AtStation+i_Product_Virtual_SpaceStationParts2_AtStation+i_Product_Virtual_Electronics4_AtStation+i_Product_RocketT2+i_Product_Hydrogen+i_Product_Oxygen+i_Product_Water+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 4 n_0_int + 30 n_1_int = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  i_Product_Virtual_SpaceStationParts1_AtStation: - 1 i_Product_Virtual_SpaceStationParts1_AtStation - 0 n_0 = 0
  i_Product_Virtual_CrewSupplies_AtStation: - 1 i_Product_Virtual_CrewSupplies_AtStation - 0.8 n_0 = 0
  c0: - 1 c0 - 0.16666666666666666 n_0 + 12 n_1 = 0
  i_Product_Virtual_SpaceStationParts2_AtStation: - 1 i_Product_Virtual_SpaceStationParts2_AtStation - 0.75 n_0 = 0
  i_Product_Virtual_Electronics4_AtStation: - 1 i_Product_Virtual_Electronics4_AtStation - 2 n_0 = 0
  o_Product_Virtual_SpaceResearchPoints: - 1 o_Product_Virtual_SpaceResearchPoints + 48 n_0 = 0
  in_footprint: - 1 in_footprint + 1216 n_1_int = 0
  i_Product_RocketT2: - 1 i_Product_RocketT2 - 1 n_1 = 0
  i_Product_Hydrogen: - 1 i_Product_Hydrogen - 320 n_1 = 0
  i_Product_Oxygen: - 1 i_Product_Oxygen - 90 n_1 = 0
  i_Product_Water: - 1 i_Product_Water - 160 n_1 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  n_1_lower: n_1_int - n_1 >= 0
  n_1_upper: n_1_int - n_1 <= 0.99999
  n_1_cycdef: 24 n_1 - n_1_cyc = 0
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  i_Product_Virtual_SpaceStationParts1_AtStation free
  i_Product_Virtual_CrewSupplies_AtStation free
  0 <= c0 <= inf
  i_Product_Virtual_SpaceStationParts2_AtStation free
  i_Product_Virtual_Electronics4_AtStation free
  in_footprint free
  i_Product_RocketT2 free
  i_Product_Hydrogen free
  i_Product_Oxygen free
  i_Product_Water free
   o_Product_Virtual_SpaceResearchPoints >= 1
  n_0 = 1
  n_1 >= 0
  n_0_int free
  n_1_int free
  1 <= n_1_cyc <= 1000
General
  n_0_int
  n_1_int
  n_1_cyc
End"
`;

exports[`Space research solver > Crew launch quantizes to whole launches per cycle (6 crew, T1 cap 4 → 2 launches) 1`] = `
"
Maximize
  obj: i_Product_Virtual_SpaceStationParts1_AtStation+i_Product_Virtual_CrewSupplies_AtStation+i_Product_Virtual_SpaceStationParts2_AtStation+i_Product_Virtual_Electronics4_AtStation+i_Product_RocketT1+i_Product_Hydrogen+i_Product_Oxygen+i_Product_Water+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 6 n_0_int + 30 n_1_int = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  i_Product_Virtual_SpaceStationParts1_AtStation: - 1 i_Product_Virtual_SpaceStationParts1_AtStation - 0 n_0 = 0
  i_Product_Virtual_CrewSupplies_AtStation: - 1 i_Product_Virtual_CrewSupplies_AtStation - 1.2000000000000002 n_0 = 0
  c0: - 1 c0 - 0.25 n_0 + 4 n_1 = 0
  i_Product_Virtual_SpaceStationParts2_AtStation: - 1 i_Product_Virtual_SpaceStationParts2_AtStation - 1 n_0 = 0
  i_Product_Virtual_Electronics4_AtStation: - 1 i_Product_Virtual_Electronics4_AtStation - 4 n_0 = 0
  o_Product_Virtual_SpaceResearchPoints: - 1 o_Product_Virtual_SpaceResearchPoints + 96 n_0 = 0
  in_footprint: - 1 in_footprint + 1216 n_1_int = 0
  i_Product_RocketT1: - 1 i_Product_RocketT1 - 1 n_1 = 0
  i_Product_Hydrogen: - 1 i_Product_Hydrogen - 140 n_1 = 0
  i_Product_Oxygen: - 1 i_Product_Oxygen - 40 n_1 = 0
  i_Product_Water: - 1 i_Product_Water - 160 n_1 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  n_1_lower: n_1_int - n_1 >= 0
  n_1_upper: n_1_int - n_1 <= 0.99999
  n_1_cycdef: 24 n_1 - n_1_cyc = 0
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  i_Product_Virtual_SpaceStationParts1_AtStation free
  i_Product_Virtual_CrewSupplies_AtStation free
  0 <= c0 <= inf
  i_Product_Virtual_SpaceStationParts2_AtStation free
  i_Product_Virtual_Electronics4_AtStation free
  in_footprint free
  i_Product_RocketT1 free
  i_Product_Hydrogen free
  i_Product_Oxygen free
  i_Product_Water free
   o_Product_Virtual_SpaceResearchPoints >= 1
  n_0 = 1
  n_1 >= 0
  n_0_int free
  n_1_int free
  1 <= n_1_cyc <= 1000
General
  n_0_int
  n_1_int
  n_1_cyc
End"
`;

exports[`Space research solver > L1 station consumes basic regime base only (LPP pins coefficients) 1`] = `
"
Maximize
  obj: i_Product_Virtual_SpaceStationParts1_AtStation+i_Product_Virtual_CrewSupplies_AtStation+i_Product_Virtual_SpaceCrew_AtStation+i_Product_Virtual_SpaceStationParts2_AtStation+i_Product_Virtual_Electronics4_AtStation+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  i_Product_Virtual_SpaceStationParts1_AtStation: - 1 i_Product_Virtual_SpaceStationParts1_AtStation - 0.25 n_0 = 0
  i_Product_Virtual_CrewSupplies_AtStation: - 1 i_Product_Virtual_CrewSupplies_AtStation - 0 n_0 = 0
  i_Product_Virtual_SpaceCrew_AtStation: - 1 i_Product_Virtual_SpaceCrew_AtStation - 0 n_0 = 0
  i_Product_Virtual_SpaceStationParts2_AtStation: - 1 i_Product_Virtual_SpaceStationParts2_AtStation - 0 n_0 = 0
  i_Product_Virtual_Electronics4_AtStation: - 1 i_Product_Virtual_Electronics4_AtStation - 0 n_0 = 0
  o_Product_Virtual_SpaceResearchPoints: - 1 o_Product_Virtual_SpaceResearchPoints + 0 n_0 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  i_Product_Virtual_SpaceStationParts1_AtStation free
  i_Product_Virtual_CrewSupplies_AtStation free
  i_Product_Virtual_SpaceCrew_AtStation free
  i_Product_Virtual_SpaceStationParts2_AtStation free
  i_Product_Virtual_Electronics4_AtStation free
  o_Product_Virtual_SpaceResearchPoints free
  n_0 = 1
  n_0_int free
  
General
  n_0_int
  
End"
`;

exports[`Space research solver > L2 station consumes basic base + 1 × basic delta (LPP pins coefficients) 1`] = `
"
Maximize
  obj: i_Product_Virtual_SpaceStationParts1_AtStation+i_Product_Virtual_CrewSupplies_AtStation+i_Product_Virtual_SpaceCrew_AtStation+i_Product_Virtual_SpaceStationParts2_AtStation+i_Product_Virtual_Electronics4_AtStation+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 2 n_0_int = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  i_Product_Virtual_SpaceStationParts1_AtStation: - 1 i_Product_Virtual_SpaceStationParts1_AtStation - 0.5 n_0 = 0
  i_Product_Virtual_CrewSupplies_AtStation: - 1 i_Product_Virtual_CrewSupplies_AtStation - 0.4 n_0 = 0
  i_Product_Virtual_SpaceCrew_AtStation: - 1 i_Product_Virtual_SpaceCrew_AtStation - 0.08333333333333333 n_0 = 0
  i_Product_Virtual_SpaceStationParts2_AtStation: - 1 i_Product_Virtual_SpaceStationParts2_AtStation - 0 n_0 = 0
  i_Product_Virtual_Electronics4_AtStation: - 1 i_Product_Virtual_Electronics4_AtStation - 0 n_0 = 0
  o_Product_Virtual_SpaceResearchPoints: - 1 o_Product_Virtual_SpaceResearchPoints + 0 n_0 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  i_Product_Virtual_SpaceStationParts1_AtStation free
  i_Product_Virtual_CrewSupplies_AtStation free
  i_Product_Virtual_SpaceCrew_AtStation free
  i_Product_Virtual_SpaceStationParts2_AtStation free
  i_Product_Virtual_Electronics4_AtStation free
  o_Product_Virtual_SpaceResearchPoints free
  n_0 = 1
  n_0_int free
  
General
  n_0_int
  
End"
`;

exports[`Space research solver > L3 station produces base RP, L=3 → 48 RP (LPP pins advanced-regime base) 1`] = `
"
Maximize
  obj: i_Product_Virtual_SpaceStationParts1_AtStation+i_Product_Virtual_CrewSupplies_AtStation+i_Product_Virtual_SpaceCrew_AtStation+i_Product_Virtual_SpaceStationParts2_AtStation+i_Product_Virtual_Electronics4_AtStation+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 4 n_0_int = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  i_Product_Virtual_SpaceStationParts1_AtStation: - 1 i_Product_Virtual_SpaceStationParts1_AtStation - 0 n_0 = 0
  i_Product_Virtual_CrewSupplies_AtStation: - 1 i_Product_Virtual_CrewSupplies_AtStation - 0.8 n_0 = 0
  i_Product_Virtual_SpaceCrew_AtStation: - 1 i_Product_Virtual_SpaceCrew_AtStation - 0.16666666666666666 n_0 = 0
  i_Product_Virtual_SpaceStationParts2_AtStation: - 1 i_Product_Virtual_SpaceStationParts2_AtStation - 0.75 n_0 = 0
  i_Product_Virtual_Electronics4_AtStation: - 1 i_Product_Virtual_Electronics4_AtStation - 2 n_0 = 0
  o_Product_Virtual_SpaceResearchPoints: - 1 o_Product_Virtual_SpaceResearchPoints + 48 n_0 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  i_Product_Virtual_SpaceStationParts1_AtStation free
  i_Product_Virtual_CrewSupplies_AtStation free
  i_Product_Virtual_SpaceCrew_AtStation free
  i_Product_Virtual_SpaceStationParts2_AtStation free
  i_Product_Virtual_Electronics4_AtStation free
   o_Product_Virtual_SpaceResearchPoints >= 48
  n_0 = 1
  n_0_int free
  
General
  n_0_int
  
End"
`;

exports[`Space research solver > low cargo demand scales launches continuously (no integer pinning) 1`] = `
"
Maximize
  obj: i_Product_RocketT1+i_Product_Hydrogen+i_Product_Oxygen+i_Product_Water+i_Product_SpaceStationParts1+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 30 n_0_int = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  in_footprint: - 1 in_footprint + 1216 n_0_int = 0
  i_Product_RocketT1: - 1 i_Product_RocketT1 - 1 n_0 = 0
  i_Product_Hydrogen: - 1 i_Product_Hydrogen - 140 n_0 = 0
  i_Product_Oxygen: - 1 i_Product_Oxygen - 40 n_0 = 0
  i_Product_Water: - 1 i_Product_Water - 160 n_0 = 0
  i_Product_SpaceStationParts1: - 1 i_Product_SpaceStationParts1 - 40 n_0 = 0
  o_Product_Virtual_SpaceStationParts1_AtStation: - 1 o_Product_Virtual_SpaceStationParts1_AtStation + 40 n_0 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  in_footprint free
  i_Product_RocketT1 free
  i_Product_Hydrogen free
  i_Product_Oxygen free
  i_Product_Water free
  i_Product_SpaceStationParts1 free
   o_Product_Virtual_SpaceStationParts1_AtStation >= 30
  n_0 >= 0
  n_0_int free
  
General
  n_0_int
  
End"
`;

exports[`Space research solver > station node count is pinned at 1 regardless of level 1`] = `
"
Maximize
  obj: i_Product_Virtual_SpaceStationParts1_AtStation+i_Product_Virtual_CrewSupplies_AtStation+i_Product_Virtual_SpaceCrew_AtStation+i_Product_Virtual_SpaceStationParts2_AtStation+i_Product_Virtual_Electronics4_AtStation+-0.01 in_frastructure_total+-0.01 in_footprint
Subject To
  in_frastructure_total: - 1 in_frastructure_total + 1 in_workers + 0.01 in_electricity + 0.01 in_computing + 1 in_maintenance_1 + 10 in_maintenance_2 + 50 in_maintenance_3 = 0
  in_workers: - 1 in_workers + 8 n_0_int = 0
  in_electricity: - 1 in_electricity = 0
  in_computing: - 1 in_computing = 0
  in_maintenance_1: - 1 in_maintenance_1 = 0
  in_maintenance_2: - 1 in_maintenance_2 = 0
  in_maintenance_3: - 1 in_maintenance_3 = 0
  i_Product_Virtual_SpaceStationParts1_AtStation: - 1 i_Product_Virtual_SpaceStationParts1_AtStation - 0 n_0 = 0
  i_Product_Virtual_CrewSupplies_AtStation: - 1 i_Product_Virtual_CrewSupplies_AtStation - 1.6 n_0 = 0
  i_Product_Virtual_SpaceCrew_AtStation: - 1 i_Product_Virtual_SpaceCrew_AtStation - 0.3333333333333333 n_0 = 0
  i_Product_Virtual_SpaceStationParts2_AtStation: - 1 i_Product_Virtual_SpaceStationParts2_AtStation - 1.25 n_0 = 0
  i_Product_Virtual_Electronics4_AtStation: - 1 i_Product_Virtual_Electronics4_AtStation - 6 n_0 = 0
  o_Product_Virtual_SpaceResearchPoints: - 1 o_Product_Virtual_SpaceResearchPoints + 144 n_0 = 0
  n_0_lower: n_0_int - n_0 >= 0
  n_0_upper: n_0_int - n_0 <= 0.99999
  
Bounds
  in_frastructure_total free
  in_workers free
  in_electricity free
  in_computing free
  in_maintenance_1 free
  in_maintenance_2 free
  in_maintenance_3 free
  i_Product_Virtual_SpaceStationParts1_AtStation free
  i_Product_Virtual_CrewSupplies_AtStation free
  i_Product_Virtual_SpaceCrew_AtStation free
  i_Product_Virtual_SpaceStationParts2_AtStation free
  i_Product_Virtual_Electronics4_AtStation free
   o_Product_Virtual_SpaceResearchPoints >= 1
  n_0 = 1
  n_0_int free
  
General
  n_0_int
  
End"
`;
